# video-sentiment-model

./: .gitignore  hello.py  pyproject.toml  req.txt
training/: meld_dataset.py  models.py
